--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,10 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.5'
     compile 'io.reactivex:rxandroid:1.2.0'
     //retrofit+okHttp
-
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
-
     //autolayout
     compile 'com.zhy:autolayout:1.4.3'
     // Dagger2
@@ -52,7 +50,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     //数据缓存
     compile 'com.anupcowkur:reservoir:2.1'
-
     compile 'com.camnter.easyrecyclerview:easyrecyclerview:1.3'
-
+    //    compile 'io.github.yavski:fab-speed-dial:1.0.4'
+    //    compile files('libs/fab.jar')
+    compile project(':library')
 }
